Fix for buttons being too small in sidebar

--- a/blackoled.theme.css
+++ b/blackoled.theme.css
@@ -269,3 +269,6 @@ button[aria-label="Send a gift"] {
 .panelSubtextContainer_b2ca13 {
     display: none;
 }
+.button_dd4f85 {
+    padding: 2px 2px;
+}
